# nlf-pipeline

./: README.md  environment.yml  pyproject.toml
src/nlf_pipeline/: download_yt.sh  run_all.py  run_camtraj.py  run_frame_interp.py  run_nlf.py  run_render.py  run_semseg.py  run_slam.py  run_smoothed_smplfitter.py  viz_estimated_camera_motion.py
src/nlf_pipeline/rife/: IFNet_HDv3.py
src/nlf_pipeline/util/: improc.py  paths.py  smpl_mask.py
